<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:background="@drawable/delete_background">

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="@dimen/ic_delete"
                android:layout_height="@dimen/ic_delete"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/padd_10"
                android:src="@drawable/ic_delete_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/padd_10"
                android:layout_toLeftOf="@id/delete_icon"
                android:text="@string/delete"
                android:textColor="#fff"
                android:textSize="13dp" />

        </RelativeLayout>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_foreground"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:background="@drawable/round_four_corner"
            android:padding="@dimen/padd_10">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tripNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/TripName"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tripDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:text="@string/trip_date"
                android:textColor="@color/item_name"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripNameTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tripTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="1dp"
                android:text="@string/tripTime"
                android:textColor="@color/item_name"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripDateTextView" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/taskProgressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/task_finished"
                android:textColor="@color/purple"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tripTimeTextView" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="350dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/from_to_ic"
                app:layout_constraintEnd_toStartOf="@+id/tripDateTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fromTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/from"
                android:textColor="@color/item_name"
                android:textSize="13dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/toTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="17dp"
                android:text="@string/To"
                android:textColor="@color/item_name"
                android:textSize="13dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/fromTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>