<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragmet"
            type="com.tripplanner.registration.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registration.LoginFragment"
        >

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginStart="188dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="188dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:id="@+id/materialTextView2"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="1dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"

                android:textColorHint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCardView"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="79dp"
            android:layout_marginEnd="1dp"
            android:onClick="login"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgetpassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="175dp"
            android:text="@string/forgetPassword"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_tripDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />



          <!--  <com.facebook.login.widget.LoginButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1" />-->

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button_google"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:layout_marginStart="142dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="142dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="129dp"
            android:text="@string/Dont"
            android:textColor="@color/mdtp_dark_gray"
            android:textSize="@dimen/padd_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button_google" />

        <TextView
            android:id="@+id/signUpTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="161dp"
            android:text="@string/registerNow"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/padd_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="199dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="199dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginCardView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>