<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>
        <variable
            name="obj"
            type="com.tripplanner.data_layer.local_data.Entity.Trip" />
        <variable
            name="model"
            type="com.tripplanner.home.HomeViewModel" />


    </data>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_menu_shape"
            android:elevation="2dp"
            android:outlineProvider="bounds"
            app:cardBackgroundColor="#fefefe"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp"
            app:cardForegroundColor="#fefefe">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="103dp">

                <TextView
                    android:id="@+id/Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@={obj.tripDate}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView4" />

                <TextView
                    android:id="@+id/Time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/Date" />

                <TextView
                    android:id="@+id/From"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@={obj.startPoint}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toEndOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/From"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/Name" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:text="@string/To"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toEndOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Time"
                    android:textColor="#676565"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView4" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="18dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.542"
                    app:srcCompat="@drawable/from_to" />

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="121dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@={obj.name}"
                    android:textColor="#FD0F0F0F"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="35dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/Date"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/Name"
                    app:layout_constraintTop_toBottomOf="@+id/Name" />

                <TextView
                    android:id="@+id/To"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{obj.endPoint}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/From" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>